--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
 	box-sizing: border-box;
 	padding: 0;
@@ -13,6 +14,7 @@
 	font-family: Poppins;
 	font-size: 16px;
 	line-height: 24px;
+	text-decoration: none;
 }
 
 .nav-menu a:hover {
@@ -25,7 +27,7 @@ a:focus {
 	font-weight: 800;
 }
 .navbar {
-	background-color: gray;
+	background-color: #c4c4c4;
 	flex: 50%;
 	display: flex;
 	justify-content: left;
@@ -66,11 +68,28 @@ a:focus {
 	cursor: pointer;
 }
 
+.drop1 > .menu {
+	background-color: #c4c4c4 !important;
+	padding: 10px !important;
+}
+.drop1 > .menu > .item {
+	font-weight: normal;
+	font-family: Poppins;
+	font-size: 16px;
+	line-height: 24px;
+}
+.drop1 {
+	font-weight: normal;
+	font-family: Poppins;
+	font-size: 16px;
+	line-height: 24px;
+}
+
 /* hero text*/
 .hero {
 	display: grid;
-	grid-template-columns: repeat(2, 600px);
-	grid-column-gap: 350px;
+	grid-template-columns: repeat(2, 700px);
+	grid-column-gap: 230px;
 }
 .hero .heroText {
 	margin-top: 130px;
@@ -78,7 +97,7 @@ a:focus {
 	font-family: 'Balsamiq Sans';
 	font-weight: bold;
 	font-size: 3rem;
-	max-width: 450px;
+	width: 600px;
 }
 
 /* form*/
@@ -156,8 +175,8 @@ select {
 }
 .hero-login {
 	display: grid;
-	grid-template-columns: repeat(2, 600px);
-	grid-column-gap: 300px;
+	grid-template-columns: repeat(2, 700px);
+	grid-column-gap: 230px;
 }
 .hero-login .heroText {
 	margin-top: 130px;
@@ -165,9 +184,10 @@ select {
 	font-family: 'Balsamiq Sans';
 	font-weight: bold;
 	font-size: 3rem;
-	max-width: 450px;
+	width: 600px;
 }
 .loginBtn {
+	margin-left: 5px;
 	padding: 1em 7em 1em 7em;
 	font-size: 1.3em;
 	border-radius: 1.3em 1.3em;
@@ -201,7 +221,7 @@ select {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 50%;
+	width: 90%;
 	margin-left: 20px;
 }
 
@@ -212,6 +232,8 @@ select {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 24px;
+	text-decoration: none;
+	margin-top: 10px;
 }
 
 .second-menu > a:visited {
@@ -222,13 +244,6 @@ select {
 .second-menu > a:focus {
 	color: #000000;
 	font-weight: 800;
-}
-.second-menu > .center-text {
-	text-align: center;
-	font-family: 'Balsamiq Sans';
-	font-size: 3em;
-	font-weight: bold;
-	margin-top: 1em;
 }
 
 .search-box {
@@ -260,6 +275,18 @@ select {
 }
 .heading {
 	margin-left: 20px;
+}
+
+.center-text {
+	height: 116px;
+	width: 622px;
+	font-family: Fredoka One;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 48px;
+	line-height: 58px;
+	margin-left: 430px;
+	margin-top: 100px;
 }
 /* card */
 .card-cont {
@@ -349,7 +376,7 @@ select {
 	border: 1px solid #000000;
 	width: 100px;
 	padding: 10px 25px 10px 20px;
-	margin-top: 60px;
+	margin-top: 40px;
 	margin-left: 190px;
 	border-radius: 15px;
 }
@@ -581,4 +608,401 @@ select {
 	background: rgba(196, 196, 196, 0.001);
 	border: 2px solid rgba(0, 0, 0, 0.2);
 	border-radius: 19px;
+}
+
+/*searchpage*/
+.leftContent > .header-left {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 30px;
+	/* identical to box height */
+
+	color: #000000;
+	margin-top: 80px;
+	margin-left: 10px;
+}
+
+.leftSelect {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height */
+
+	color: #000000;
+	margin-left: 10px;
+}
+
+.leftSelect > .fa-chevron-down {
+	margin-left: 30px;
+}
+.search-box1 {
+	text-align: center;
+	margin-top: -1380px;
+	margin-left: 20px;
+}
+
+.search-box1 input[type='text'] {
+	border-radius: 20px;
+	padding: 15px !important;
+	background-color: rgb(236, 236, 236) !important;
+	border-radius: 19px 19px !important;
+	border: 0px rgb(236, 236, 236);
+	box-shadow: 0px 7px 7px 7px rgb(211, 210, 210);
+}
+.search-box1 > .input {
+	width: 60% !important;
+}
+
+.search-box2 {
+	margin-left: 5px;
+}
+
+.search-box2 input[type='text'] {
+	border-radius: 20px;
+	padding: 15px 65px 15px 10px !important;
+	background-color: rgb(236, 236, 236) !important;
+	border-radius: 19px 19px !important;
+	border: 0px rgb(236, 236, 236);
+}
+
+.countries {
+	margin-top: 20px;
+	height: 35px;
+	max-width: 131px;
+	border-radius: 50px;
+	font-family: Poppins;
+	font-weight: 800;
+	border: 5px black;
+	padding: 10px;
+	background-color: #c4c4c4;
+	margin-left: 10px;
+	text-align: center;
+}
+
+.leftSelect1,
+.leftSelect2,
+.leftSelect3,
+.leftSelect4,
+.leftSelect5 {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height */
+
+	color: #000000;
+	margin-left: 10px;
+	height: 24px;
+	width: 230px;
+}
+
+.leftSelect1 > i {
+	margin-left: 150px;
+}
+
+.leftSelect2 > i {
+	margin-left: 62px;
+}
+
+.leftSelect3 > i {
+	margin-left: 88px;
+}
+
+.leftSelect4 > i {
+	margin-left: 100px;
+}
+
+.leftSelect5 > i {
+	margin-left: 140px;
+}
+
+.sort-drop {
+	position: absolute;
+	width: 204px;
+	height: 41px;
+	left: 1135px;
+	top: 180px;
+	background: #c4c4c4 !important;
+	border-radius: 7px !important;
+}
+
+.sort-drop > .dropdown > .menu {
+	background: #c4c4c4 !important;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 21px;
+}
+.category {
+	margin-top: 40px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height */
+
+	color: #000000;
+	margin-left: 285px;
+}
+
+.search-card {
+	position: relative;
+	height: 164px;
+	width: 1046px;
+	left: 285px;
+	top: 10px;
+	border-radius: 17px;
+	background: rgba(196, 196, 196, 0.001);
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	float: left;
+	margin-bottom: 20px;
+}
+
+.university-name {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 36px;
+	/* identical to box height */
+	display: block;
+	color: #000000;
+	float: right;
+	margin-right: 600px;
+	margin-top: 10px;
+}
+.university-name2 {
+	margin-right: 510px;
+}
+.course-2 {
+	margin-right: 500px;
+}
+.university-rankings {
+	position: absolute;
+	top: 5px;
+	left: 5px;
+	background: #c4c4c4;
+	border-radius: 11px 5px 5px 5px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	padding: 5px 10px;
+	color: #000;
+}
+.location-name {
+	margin-top: -115px;
+	margin-right: 535px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 27px;
+	/* identical to box height */
+	color: rgba(0, 0, 0, 0.8);
+	float: right;
+}
+
+.location-name > i {
+	margin-right: 10px;
+}
+
+.fav-card {
+	width: 212px;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	padding: 8px 15px 8px 15px;
+	background: #c4c4c4;
+	border-radius: 17px 12px 17px 17px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height */
+
+	color: #000000;
+}
+
+.fav-card > i {
+	margin-right: 15px;
+}
+
+.course-fees {
+	margin-top: -65px;
+	margin-right: 430px;
+}
+
+.course-fees,
+.date-details {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height */
+
+	color: #000000;
+	float: right;
+}
+
+.date-details {
+	margin-left: 30px;
+}
+
+.university-rating {
+	float: right;
+	margin-top: -30px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height */
+
+	color: #000000;
+	margin-right: 750px;
+}
+
+.category2 {
+	margin-top: 600px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height */
+
+	color: #000000;
+	margin-left: 280px;
+}
+
+/* university details */
+
+.university-bg {
+	margin-top: 0px;
+}
+
+.backTo {
+	position: absolute;
+	bottom: 420px;
+	left: 10px;
+	background: #c4c4c4;
+	border-radius: 10px 10px 5px 5px;
+	border: transparent;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	padding: 10px 20px 10px 20px;
+	color: #000000;
+}
+.backTo:hover {
+	cursor: pointer;
+}
+
+.backTo > i {
+	margin-right: 10px;
+}
+
+.intials {
+	margin-left: 10px;
+}
+.intials > h1 {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 48px;
+	line-height: 72px;
+
+	color: #000000;
+}
+
+.intials > .intials-location {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 20px;
+	color: #000000;
+	margin-bottom: 60px;
+}
+
+.intials-location > i {
+	margin-right: 10px;
+}
+
+.addTo {
+	width: 212px;
+	position: absolute;
+	bottom: 0px;
+	right: 200px;
+	padding: 10px 15px 10px 15px;
+	background: #c4c4c4;
+	border-radius: 17px 12px 17px 17px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height */
+
+	color: #000000;
+}
+
+.addTo > i {
+	margin-right: 15px;
+}
+
+.apply-btn {
+	background: #c4c4c4;
+	border-radius: 20.3333px 14.3529px 20.3333px 20.3333px;
+	position: absolute;
+	bottom: 0px;
+	right: 20px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 19.1373px;
+	line-height: 29px;
+	/* identical to box height */
+
+	color: #000000;
+	padding: 10px 20px 10px 20px;
+	border: transparent;
+}
+.detailed-content {
+	margin-left: 15px;
+}
+
+.detailed-content > h2 {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 28px;
+	line-height: 42px;
+	/* identical to box height */
+
+	color: #000000;
+}
+
+.detailed-content > .more-details {
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 26px;
+	/* or 162% */
+
+	color: #000000;
 }
